[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/CanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/InGameMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Black circle.png" type="Texture" id=4]
[ext_resource path="res://Player/GameOver/adventurer-knock-dwn-02.png" type="Texture" id=5]
[ext_resource path="res://Player/GameOver/adventurer-knock-dwn-00.png" type="Texture" id=6]
[ext_resource path="res://Player/GameOver/adventurer-knock-dwn-06.png" type="Texture" id=7]
[ext_resource path="res://Player/GameOver/adventurer-knock-dwn-01.png" type="Texture" id=8]
[ext_resource path="res://Player/GameOver/adventurer-knock-dwn-05.png" type="Texture" id=9]
[ext_resource path="res://Player/GameOver/adventurer-knock-dwn-03.png" type="Texture" id=10]
[ext_resource path="res://Player/GameOver/adventurer-knock-dwn-04.png" type="Texture" id=11]
[ext_resource path="res://Menu/DefaultTheme.tres" type="Theme" id=12]
[ext_resource path="res://Player/GameOver/game_over_music.ogg" type="AudioStream" id=13]

[sub_resource type="Animation" id=1]
resource_name = "ScreenWipe"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 5, 5 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": false,
"name": "Default",
"speed": 10.0
} ]

[node name="UI" type="CanvasLayer" groups=[
"UI",
]]
script = ExtResource( 1 )

[node name="InGameMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="EndScreens" type="Node" parent="."]

[node name="RespawnAnim" type="Control" parent="EndScreens"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="EndScreens/RespawnAnim"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 250, 250 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="EndScreens/RespawnAnim/TextureRect"]
anims/ScreenWipe = SubResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="GameOver" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GameOver"]
margin_left = 312.0
margin_top = 150.0
margin_right = 712.0
margin_bottom = 150.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="GameOver/CenterContainer"]
position = Vector2( 196.383, 10 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "Default"
frame = 6
playing = true

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -80.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GameOver/VBoxContainer"]
margin_right = 400.0
margin_bottom = 70.0

[node name="TryAgain" type="Button" parent="GameOver/VBoxContainer/CenterContainer"]
margin_left = 43.0
margin_right = 357.0
margin_bottom = 70.0
text = "Try Again"

[node name="CenterContainer2" type="CenterContainer" parent="GameOver/VBoxContainer"]
margin_top = 74.0
margin_right = 400.0
margin_bottom = 144.0

[node name="mainMenu" type="Button" parent="GameOver/VBoxContainer/CenterContainer2"]
margin_left = 30.0
margin_right = 370.0
margin_bottom = 70.0
text = "Main Menu"

[node name="CenterContainer3" type="CenterContainer" parent="GameOver/VBoxContainer"]
margin_top = 148.0
margin_right = 400.0
margin_bottom = 218.0

[node name="Quit" type="Button" parent="GameOver/VBoxContainer/CenterContainer3"]
margin_left = 112.0
margin_right = 287.0
margin_bottom = 70.0
text = "quit"

[node name="game_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -15.0
bus = "Music"
[connection signal="animation_finished" from="EndScreens/RespawnAnim/TextureRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="GameOver/VBoxContainer/CenterContainer/TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/CenterContainer2/mainMenu" to="." method="_on_mainMenu_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/CenterContainer3/Quit" to="." method="_on_Quit_pressed"]
